Updated Controller.java